Major initial commit
- ball tracker
- player tracker
- court key points (manual)
- copy of utils from tennis

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project folders
+input_media/
+models/
+output_media/
+detect/
+model_training/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
